--- a/_config.yml
+++ b/_config.yml
@@ -4,26 +4,20 @@ markdown: redcarpet
 
 # 作者信息
 author: 
-  name: 闫肃
-  email: yansu0711@gmail.com
-  link: http://yansu.org
-  weibo: http://weibo.com/yansu0711
-  github: http://github.com/suyan
+  name: Yiner
+  email: lijiuyang1992@gmail.com
+  link: http://pyiner.com
+  github: https://github.com/Yiner/
 
 # 站点信息
-title: 闫肃的博客 
-description: 闫肃的博客
-url: http://yansu.org
+title: Yiner的博客
+description: Yiner的博客
+url: http://pyiner.com
 rss_url: /pages/atom.xml
 
 # gavatar头像及Favicon
 gavatar: /public/upload/gavatar/gavatar.png
 favicon: /public/upload/gavatar/favicon.ico
-
-# google analytics 设置
-ga:
-  id: UA-43667383-1
-  url: yansu.org
 
 # disqus 设置
 disqus:
